# otel-benchmarks

./: .gitignore  LICENSE  README.md  index.html  index.md
.github/workflows/: run-benchmark.yml
dev/bench/: by-version.html  data.js  index.html
harnesses/dotnet/: Directory.Build.props  README.md
harnesses/dotnet/OtelBenchmarks.Dotnet/: OtelBenchmarks.Dotnet.csproj  Program.cs
harnesses/java/: README.md  build.gradle  settings.gradle
harnesses/java/src/jmh/java/io/opentelemetry/benchmarks/: S1CounterApiOnly.java
harnesses/rust/: Cargo.toml  README.md
harnesses/rust/benches/: s1_counter.rs
harnesses/rust/src/: main.rs
scenarios/: S1-counter-api-only.md  S1b-counter-api-only-guarded.md
