[package]
name = "otel-rust-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = "0.32.0"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "s1_counter"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
